--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -270,6 +270,7 @@ button,
 [type=reset],
 [type=submit] {
   -webkit-appearance: button;
+  appearance: button;
 }
 
 button:not(:disabled),
@@ -298,6 +299,7 @@ input[type=time],
 input[type=datetime-local],
 input[type=month] {
   -webkit-appearance: listbox;
+  appearance: listbox;
 }
 
 textarea {
@@ -336,6 +338,7 @@ progress {
 [type=search] {
   outline-offset: -2px;
   -webkit-appearance: none;
+  appearance: none;
 }
 
 [type=search]::-webkit-search-decoration {
@@ -918,6 +921,7 @@ pre code {
   .order-sm-12 {
     order: 12;
   }
+
 
   .offset-sm-0 {
     margin-left: 0;
