--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,7 @@
 
 
 <!-- ========================= SECTION MAIN ========================= -->
-<section class="section-intro padding-y-sm">
+{% comment %} <section class="section-intro padding-y-sm">
 <div class="container">
 
 <div class="intro-banner-wrap">
@@ -18,6 +18,33 @@
 </div>
 
 </div> <!-- container //  -->
+</section> {% endcomment %}
+ {% comment %} <section class="section-intro padding-y-sm">
+  <div class="container">
+    <div class="intro-banner-wrap">
+      <img src="{% static 'images/banners/1.jpg' %}" class="img-fluid rounded banner-image" alt="Intro Banner">
+    </div>
+  </div>
+</section>  {% endcomment %}
+
+<section class="section-intro padding-y-sm">
+
+  <div class="container">
+  
+    <div class="intro-banner-wrap jumbotron" style=" background: linear-gradient(to bottom right,rgb(250, 71, 196),rgb(142, 186, 230));">
+      {% comment %} <img src="{% static 'images/banners/3.jpg' %}" class="img-fluid rounded banner-image" alt="Intro Banner"> {% endcomment %}
+      <div class="jumbotron-content "  >
+        <h1 class="display-4" style="text-align:center; color:rgb(104, 61, 61);"><b>WELCOME TO DEVTÜRKS</b></h1>
+        <p class="lead" style="text-align:center;"><b>DEVTÜRKS is the first platform for G2G (Government to Government) and B2G (Business to Government) interactions and more</b></p>
+ <a class="btn btn-primary btn-lg" 
+   href="{% url 'store' %}" 
+   role="button" 
+   style="display: block; text-align: right; width: 200px;">
+  LET’S BEGIN
+</a>
+
+    </div>
+  </div>
 </section>
 <!-- ========================= SECTION MAIN END// ========================= -->
 
@@ -25,10 +52,10 @@
 <section class="section-name padding-y-sm">
 <div class="container">
 
-<header class="section-heading">
+{% comment %} <header class="section-heading">
 	<a href="./store.html" class="btn btn-outline-primary float-right">See all</a>
 	<h3 class="section-title">Popular products</h3>
-</header><!-- sect-heading -->
+</header><!-- sect-heading --> {% endcomment %}
 
 	
 <div class="row">
