--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -20,6 +20,9 @@
 </article> <!-- gallery-wrap .end// -->
 		</aside>
 		<main class="col-md-6 border-left">
+
+ {% comment %} SİZE VE YA RENK GİBİ SEÇENEKLERİNİZ VARSA BURAYA EKLEYEBİLİRSİNİZ {% endcomment %}
+		
 <article class="content-body">
 
 <h2 class="title">{{single_product.product_name}}</h2>
@@ -30,7 +33,7 @@
 
 <p>{{ single_product.description}}</p>
 
-
+{% comment %} 
 <hr>
 	<div class="row">
 		<div class="item-option-select">
@@ -70,16 +73,25 @@
 			</div> 
 		</div>
 	</div> <!-- row.// -->
-	<hr>
+	<hr> {% endcomment %}
     {% if single_product.stock <= 0 %}
 
     <h5>out of stock</h5>
     
     {% else %}
+	{% if in_cart %}
+	<a href="#" class="btn  btn-success"> <span class="text">Added to Cart</span> <i class="fas fa-check"></i>  </a>
+
+		<a href="{% url 'cart' %}" class="btn  btn-outline-primary"> <span class="text">View Cart</span> <i class="fas fa-eye"></i>  </a>
+
+	{% else %}
+	
     
-	<a href="./product-detail.html" class="btn  btn-primary"> <span class="text">Add to cart</span> <i class="fas fa-shopping-cart"></i>  </a>
+	<a href="{% url 'add_cart' single_product.id %}" class="btn  btn-primary"> <span class="text">Add to cart</span> <i class="fas fa-shopping-cart"></i>  </a>
+	{% endif %}
     {% endif %}
 </article> <!-- product-info-aside .// -->
+
 		</main> <!-- col.// -->
 	</div> <!-- row.// -->
 </div> <!-- card.// -->
