--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -7,8 +7,16 @@
 <!-- ========================= SECTION PAGETOP ========================= -->
 <section class="section-pagetop bg">
 <div class="container">
+{% if 'search' in request.path %} 
+{% comment %} url içinde search varsa {% endcomment %}
+	<h2 class="title-page">Search Result</h2>
+
+
+{% else %}
+
 	<h2 class="title-page">Our Store</h2>
-	
+{% endif %}
+
 </div> <!-- container //  -->
 </section>
 <!-- ========================= SECTION INTRO END// ========================= -->
@@ -19,15 +27,15 @@
 <div class="row">
 	<aside class="col-md-3">
 		
-<div class="card">
+{% comment %} <div class="card">
 	<article class="filter-group">
 		<header class="card-header">
 			<a href="#" data-toggle="collapse" data-target="#collapse_1" aria-expanded="true" class="">
 				<i class="icon-control fa fa-chevron-down"></i>
 				<h6 class="title">Categories</h6>
 			</a>
-		</header>
-		<div class="filter-content collapse show" id="collapse_1" style="">
+		</header> {% endcomment %}
+		{% comment %} <div class="filter-content collapse show" id="collapse_1" style="">
 			<div class="card-body">
 				
 				<ul class="list-menu">
@@ -41,8 +49,8 @@
 				</ul>
 
 			</div> <!-- card-body.// -->
-		</div>
-	</article> <!-- filter-group  .// -->
+		</div> {% endcomment %}
+	{% comment %} </article> <!-- filter-group  .// -->
 	<article class="filter-group">
 		<header class="card-header">
 			<a href="#" data-toggle="collapse" data-target="#collapse_4" aria-expanded="true" class="">
@@ -115,7 +123,7 @@
 				<button class="btn btn-block btn-primary">Apply</button>
 			</div><!-- card-body.// -->
 		</div>
-	</article> <!-- filter-group .// -->
+	</article> <!-- filter-group .// --> {% endcomment %}
 	
 </div> <!-- card.// -->
 
@@ -130,6 +138,9 @@
 </header><!-- sect-heading -->
 
 <div class="row">
+{% if products %}
+
+
 {% for product in products  %}
 
 
@@ -137,7 +148,7 @@
 		<figure class="card card-product-grid">
 			<div class="img-wrap"> 
 				
-				<img src="{{product.images.url}}">
+				<a href="{{ product.get_url }}"><img src="{{product.images.url}}"></a>
 				
 			</div> <!-- img-wrap.// -->
 			<figcaption class="info-wrap">
@@ -148,29 +159,55 @@
 						<del class="price-old">$1980</del>
 					</div> <!-- price-wrap.// -->
 				</div>
-				<a href="#" class="btn btn-block btn-primary">Add to cart </a>
+				{% comment %} burası ayar ve al buttonu................ {% endcomment %}
+				<div style="display">
+				<a href="{% url 'add_cart' product.id %}" class="btn btn-block btn-primary">Add to cart </a>
+				<a href="{{product.get_url}}" class="btn btn-block btn-primary">View Detail </a>
+				</div>
 			</figcaption>
 		</figure>
 	</div> <!-- col.// -->
 	{% endfor %}
+	{% else %}
+	<div class="col-md-12">
+		<div class="alert alert-warning" role="alert">
+			No products found
+		</div>
+		
+{% endif %}
 	</div>
 
-
-		
-
-
-
-
-
+  
 
 <nav class="mt-4" aria-label="Page navigation sample">
+{% if products.has_other_pages  %}
+
   <ul class="pagination">
-    <li class="page-item disabled"><a class="page-link" href="#">Previous</a></li>
-    <li class="page-item active"><a class="page-link" href="#">1</a></li>
-    <li class="page-item"><a class="page-link" href="#">2</a></li>
-    <li class="page-item"><a class="page-link" href="#">3</a></li>
-    <li class="page-item"><a class="page-link" href="#">Next</a></li>
+  {% if products.has_previous %}
+
+<li class="page-item"><a class="page-link" href="?page={{products.previous_page_number}}">Previous</a></li>
+
+	{% else %}
+	<li class="page-item disabled"><a class="page-link" href="#">Previous</a></li>
+	{% endif %}
+
+  {% for i in products.paginator.page_range %}
+    {% if products.number == i %}
+	
+	
+    <li class="page-item active"><a class="page-link" href="#">{{i}}</a></li>
+		{% else %}
+
+		<li class="page-item"><a class="page-link" href="?page={{i}}">{{i}}</a></li>
+		{% endif %}
+    {% endfor %}
+	{% if products.has_next %}
+    <li class="page-item"><a class="page-link" href="?page={{products.next_page_number}}">Next</a></li>
+	{% else %}
+	<li class="page-item disabled"><a class="page-link" href="#">Next</a></li>
+	{% endif %}
   </ul>
+  {% endif %}
 </nav>
 
 	</main> <!-- col.// -->
