order modeli öncesi

--- a/templates/home.html
+++ b/templates/home.html
@@ -31,10 +31,10 @@
 
   <div class="container">
   
-    <div class="intro-banner-wrap jumbotron" style=" background: linear-gradient(to bottom right,rgb(250, 71, 196),rgb(142, 186, 230));">
+    <div class="intro-banner-wrap jumbotron" style=" background: linear-gradient(to bottom right,rgb(250, 19, 127),rgb(148, 175, 202));">
       {% comment %} <img src="{% static 'images/banners/3.jpg' %}" class="img-fluid rounded banner-image" alt="Intro Banner"> {% endcomment %}
       <div class="jumbotron-content "  >
-        <h1 class="display-4" style="text-align:center; color:rgb(104, 61, 61);"><b>WELCOME TO DEVTÜRKS</b></h1>
+        <h1 class="display-4" style="text-align:center; color:rgb(46, 44, 44);"><b>WELCOME TO DEVTÜRKS</b></h1><br>
         <p class="lead" style="text-align:center;"><b>DEVTÜRKS is the first platform for G2G (Government to Government) and B2G (Business to Government) interactions and more</b></p>
  <a class="btn btn-primary btn-lg" 
    href="{% url 'store' %}" 
