--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,33 +1,18 @@
-
-  /* Jumbotron Stili */
-.jumbotron {
-    position: relative;
-    width: 100%; /* Yatayda tam genişlik */
-    height: 500px; /* Yüksekliği 500px yapalım */
-    overflow: hidden;
-    background: linear-gradient(to bottom right, #ffccff, #cceeff); /* Açık pembe (ffccff) ve açık mavi (cceeff) geçişi */
-  }
-  
-
-  .jumbotron-content {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
-    text-align: center;
-    z-index: 1;
-  }
-  
-  .jumbotron-content h1 {
-    font-size: 3rem;
-  }
-  
-  .jumbotron-content p {
-    font-size: 1.25rem;
-  }
-  
-  .jumbotron-content .btn {
-    margin-top: 15px;
-  }
-  
+ul.thumb{
+  margin: 0;
+  padding: 0;
+  float: left;
+}
+ul.thumb li{
+  list-style: none;
+  margin: 0 5px 5px 0;
+  padding: 0;
+  float: left;
+}
+ul.thumb li img{
+  border: 1px solid #000;
+  padding: 2px;
+  background-color: #fff;
+  width: 100px;
+  height: 100px;
+}
