--- a/templates/accounts/account_verification_email.html
+++ b/templates/accounts/account_verification_email.html
@@ -2,12 +2,12 @@
 
 Hİ {{user.first_name}},
 
-<br><br>
-please click the link below to verify your email address:
-<br><br>
+
+Please click the link below to verify your email address:
+
 http://{{domain}}{% url 'activate' uidb64=uid token=token %}
 
-<br><br>
+
 If you did not create an account, no further action is required.
 
 
