--- a/templates/accounts/resetPassword.html
+++ b/templates/accounts/resetPassword.html
@@ -16,7 +16,7 @@
           {% csrf_token %}
      
           <div class="form-group">
-			 <input type="email" class="form-control" placeholder="Creat Password" name="password" required>
+			 <input type="password" class="form-control" placeholder="Creat Password" name="password" required>
           </div> <!-- form-group// -->
           <div class="form-group">
 			<input type="password" class="form-control" placeholder="Confirm Password" name="confirm_password" required>
