--- a/templates/base.html
+++ b/templates/base.html
@@ -7,9 +7,12 @@
 <meta http-equiv="cache-control" content="max-age=604800" />
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<title>GreatKart | One of the Biggest Online Shopping Platform</title>
+<title>DEVTÜRKS | One of the First G2G site</title>
 
 <link href="{% static 'images/favicon.ico' %}" rel="shortcut icon" type="image/x-icon">
+<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
+<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+
 
 <!-- jQuery -->
 <script src="{% static 'js/jquery-2.0.0.min.js' %}" type="text/javascript"></script>
@@ -23,14 +26,18 @@
 <link href="{% static 'fonts/fontawesome/css/all.min.css' %}" type="text/css" rel="stylesheet">
 
 <!-- custom style -->
+<link href="{% static 'css/custom.css' %}" rel="stylesheet" type="text/css">
 <link href="{% static 'css/ui.css' %}" rel="stylesheet" type="text/css"/>
+
 <link href="{% static 'css/responsive.css' %}" rel="stylesheet" media="only screen and (max-width: 1200px)" />
+
 
 <!-- custom javascript -->
 <script src="{% static 'js/script.js' %}" type="text/javascript"></script>
 
 <script type="text/javascript">
 /// some script
+
 
 // jquery ready start
 $(document).ready(function() {
@@ -49,3 +56,6 @@ $(document).ready(function() {
 {% endblock content %}
 
 {% include "includes/footer.html" %}
+
+
+
