--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -4,19 +4,34 @@
 	<div class="container">
 		<section class="footer-bottom border-top row">
 			<div class="col-md-2">
-				<p class="text-muted"> &copy 2019 Company name </p>
+				<p class="text-muted"> &copy DEVTÜRKS  </p>
 			</div>
 			<div class="col-md-8 text-md-center">
-				<span  class="px-2">info@pixsellz.io</span>
-				<span  class="px-2">+879-332-9375</span>
-				<span  class="px-2">Street name 123, Avanue abc</span>
+				<span  class="px-2">info@devtürks</span>
+				<span  class="px-2">+90541111111</span>
+				<span  class="px-2">Beykent,İSTANBUL </span>
 			</div>
-			<div class="col-md-2 text-md-right text-muted">
-				<i class="fab fa-lg fa-cc-visa"></i>
-				<i class="fab fa-lg fa-cc-paypal"></i>
-				<i class="fab fa-lg fa-cc-mastercard"></i>
+			
+			<div class="col-md-2 text-md-end text-center">
+				<a href="#" class="btn btn-icon btn-light"><i class="fab fa-facebook-f"></i></a>
+				<a href="#" class="btn btn-icon btn-light"><i class="fab fa-twitter"></i></a>
+				<a href="#" class="btn btn-icon btn-light"><i class="fab fa-instagram"></i></a>
+				<a href="#" class="btn btn-icon btn-light"><i class="fab fa-youtube"></i></a>
 			</div>
 		</section>
 	</div><!-- //container -->
 </footer>
 <!-- ========================= FOOTER END // ========================= -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+<script>
+$(document).ready(function() {
+	$('.thumb a').on('click', function(e) {
+		e.preventDefault();
+	
+		$('.mainImage img').attr('src', $(this).attr('href'));
+	});
+	
+});
+</script>
+</body>
+</html>
