--- a/templates/store/checkout.html
+++ b/templates/store/checkout.html
@@ -12,8 +12,8 @@
 	<aside class="col-lg-6">
 <div class="card">
 <div class="card-body">
-    <h4 class="card-title mb-4">Billing Adress</h4>
-    <form action="" method="POST">
+    <h4 class="card-title mb-4">Point of Contact Form</h4>
+    <form action="{% url 'place_order' %}" method="POST">
     {% csrf_token %}
     <div class="form-row">
     <div class="col form-group">
@@ -41,12 +41,12 @@
 
    <div class="form-row">
      <div class="col form-group">
-        <label for="">Adress Line 1</label>
-        <input type="text" name="adress_line_1" class="form-control"  required>
+        <label for="">Which organization do you work for?</label>
+        <input type="text" name="address_line_1" class="form-control"  required>
     </div> <!-- form-group end.// -->
     <div class="col form-group">
-        <label for="">Adress Line 2</label>
-        <input type="text" name="adress_line_2" class="form-control">
+        <label for="">What is your position?</label>
+        <input type="text" name="address_line_2" class="form-control">
     </div> <!-- form-group end.// -->
     </div> <!-- form-row end.// -->
 
@@ -70,7 +70,11 @@
        <textarea class="form-control"  name="order_note" rows="3"></textarea>
     </div> <!-- form-row end.// -->
     
-   
+   {% comment %} <div class="form-row">
+    <h4>we are meets you the developer of this products vs vs gibi bir mesj our mesaj diye</h4>
+    </div> <!-- form-row end.// --> {% endcomment %}
+
+  
    
 </div> <!-- card.// -->
 
@@ -84,7 +88,7 @@
 <tr class="small text-uppercase">
   <th scope="col">Product</th>
   <th scope="col" width="120">Quantity</th>
-  <th scope="col" width="120">Price</th>
+  <th scope="col" width="120">Stok</th>
   
 </tr>
 </thead>
@@ -107,8 +111,12 @@
 	</td>
 	<td> 
 		<div class="price-wrap"> 
-			<var class="price">{{cart_item.sub_total}}tl</var> 
-			<small class="text-muted"> {{cart_item.product.price}}tl each </small> 
+			<var class="price">
+            {% comment %} {{cart_item.sub_total}} {% endcomment %}
+            </var> 
+			<small class="text-muted">Avilable
+             {% comment %} {{cart_item.product.price}} {% endcomment %}
+             </small> 
 		</div> <!-- price-wrap .// -->
 	</td>
 	
