--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -13,11 +13,20 @@
 	<div class="row no-gutters">
 		<aside class="col-md-6">
 <article class="gallery-wrap"> 
-	<div class="img-big-wrap">
-	   <a href="#"><img src="{{ single_product.images.url }}"></a>
+	<div class="img-big-wrap mainImage" style="height: 400px; width: 100%; object-fit: cover;">
+	   <img src="{{ single_product.images.url }}" style="height: 400px; width: 100%; object-fit: cover;" alt="Product Image" class="img-fluid">
 	</div> <!-- img-big-wrap.// -->
 	
 </article> <!-- gallery-wrap .end// -->
+  <ul class="thumb">
+	<li> 
+	<a href="{{ single_product.images.url }}" target="mainImage"  > <img src="{{ single_product.images.url }}" alt="Product Image" ></a>
+	{% for i in product_gallery  %}
+	
+	<a href="{{i.image.url}}" target="mainImage"  > <img src="{{ i.image.url }}" alt="Product Image" ></a>
+		{% endfor %}
+	</li>
+	</ul> <!-- thumb-list .end// -->
 		</aside>
 		<main class="col-md-6 border-left">
 
@@ -28,52 +37,14 @@
 <h2 class="title">{{single_product.product_name}}</h2>
 
 <div class="mb-3"> 
-	<var class="price h4">{{single_product.price}} tl</var> 
+	<var class="price h4">
+	{% comment %} {{single_product.price}}  {% endcomment %}
+	</var> 
 </div> 
 
 <p>{{ single_product.description}}</p>
 
-{% comment %} 
-<hr>
-	<div class="row">
-		<div class="item-option-select">
-			<h6>Choose Color</h6>
-			<div class="btn-group btn-group-sm btn-group-toggle" data-toggle="buttons">
-			  <label class="btn btn-light">
-			    <input type="radio" name="radio_color"> Silver
-			  </label>
-			  <label class="btn btn-light">
-			    <input type="radio" name="radio_color" > Gray
-			  </label>
-			  <label class="btn btn-light active">
-			    <input type="radio" name="radio_color checked"> Gold
-			  </label>
-			  <label class="btn btn-light">
-			    <input type="radio" name="radio_color"> Black
-			  </label>
-			</div> 
-		</div>
-	</div> <!-- row.// -->
-	<div class="row">
-		<div class="item-option-select">
-			<h6>Select Size</h6>
-			<div class="btn-group btn-group-sm btn-group-toggle" data-toggle="buttons">
-			  <label class="btn btn-light">
-			    <input type="radio" name="radio_color"> S
-			  </label>
-			  <label class="btn btn-light active">
-			    <input type="radio" name="radio_color" checked> M
-			  </label>
-			  <label class="btn btn-light">
-			    <input type="radio" name="radio_color"> L
-			  </label>
-			  <label class="btn btn-light">
-			    <input type="radio" name="radio_color"> XL
-			  </label>
-			</div> 
-		</div>
-	</div> <!-- row.// -->
-	<hr> {% endcomment %}
+
     {% if single_product.stock <= 0 %}
 
     <h5>out of stock</h5>
@@ -99,7 +70,7 @@
 
 <br>
 
-<div class="row">
+{% comment %} <div class="row">
 			<div class="col-md-9">
 
 	<header class="section-heading">
@@ -128,7 +99,7 @@
 	
 
 	</div> <!-- col.// -->
-</div> <!-- row.// -->
+</div> <!-- row.// --> {% endcomment %}
 
 
 </div> <!-- container .//  -->
