--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -51,14 +51,14 @@
     
     {% else %}
 	{% if in_cart %}
-	<a href="#" class="btn  btn-success"> <span class="text">Added to Cart</span> <i class="fas fa-check"></i>  </a>
+	<a href="#" class="btn  btn-success"> <span class="text">Added to contract</span> <i class="fas fa-check"></i>  </a>
 
-		<a href="{% url 'cart' %}" class="btn  btn-outline-primary"> <span class="text">View Cart</span> <i class="fas fa-eye"></i>  </a>
+		<a href="{% url 'cart' %}" class="btn  btn-outline-primary"> <span class="text">View contract</span> <i class="fas fa-eye"></i>  </a>
 
 	{% else %}
 	
     
-	<a href="{% url 'add_cart' single_product.id %}" class="btn  btn-danger"> <span class="text">Add to cart</span> <i class="fas fa-shopping-cart"></i>  </a>
+	<a href="{% url 'add_cart' single_product.id %}" class="btn  btn-danger"> <span class="text">Add to contract</span> <i class="fas fa-shopping-cart"></i>  </a>
 	{% endif %}
     {% endif %}
 </article> <!-- product-info-aside .// -->
