--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -38,7 +38,7 @@
                   </div>
                 </div>
                 <div style="display">
-                  <a href="{% url 'add_cart' product.id %}" class="btn btn-block btn-danger">Add to cart </a>
+                  <a href="{% url 'add_cart' product.id %}" class="btn btn-block btn-danger">Add to contract</a>
                   <a href="{{ product.get_url }}" class="btn btn-block btn-danger">View Detail </a>
                 </div>
               </figcaption>
