Fix slider and mobile layout on homepage

--- a/templates/home.html
+++ b/templates/home.html
@@ -15,8 +15,8 @@
           <p class="lead">We are here to contribute to your cooperations</p>
 
           <div class="d-flex justify-content-center gap-4 mt-4">
-            <a class="btn btn-danger" href="{% url 'store' %}">LET'S BEGIN</a>
-            <a class="btn btn-danger" href="{% url 'about' %}">WE SUPPORTED BY</a>
+            <a class="btn btn-danger mx-2" href="{% url 'store' %}">LET'S BEGIN</a>
+            <a class="btn btn-danger mx-2" href="{% url 'about' %}">WE SUPPORTED BY</a>
           </div>
         </div>
       </div>
