--- a/templates/home.html
+++ b/templates/home.html
@@ -11,7 +11,8 @@
       <div class="col-12 col-md-4 mb-3">
         <div class="banner-box d-flex flex-column justify-content-center text-center rounded">
           <h4><b>WELCOME TO DEVTÜRKS</b></h4>
-          <p class="lead">DEVTÜRKS is the first platform for G2G and B2G interactions</p>
+          <p class="lead">DEVTÜRKS is a government-supported platform facilitating international defense cooperation, negotiations, and strategic partnerships between nations.
+</p>
           <p class="lead">We are here to contribute to your cooperations</p>
 
           <div class="d-flex justify-content-center gap-4 mt-4">
