--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -1,69 +1,96 @@
 {% load static %}
 <header class="section-header">
 
-<section class="header-main border-bottom">
+<!-- ============ MOBILE NAVBAR ============ -->
+<div class="mobile-navbar mobile-block">
+  <a href="{% url 'home' %}" class="brand-wrap">
+    <strong><span style="color:#1e4fff">DEV</span><span style="color:#555">TÜRKS</span></strong>
+  </a>
+
+  <div class="d-flex align-items-center">
+    <div class="dropdown mr-3">
+      <button class="btn btn-primary" data-toggle="dropdown">
+        <i class="fa fa-bars"></i>
+      </button>
+      <div class="dropdown-menu dropdown-menu-right">
+        <a class="dropdown-item" href="{% url 'store' %}">Store</a>
+        {% for category in links %}
+          <a class="dropdown-item" href="{{ category.get_url }}">{{ category.category_name }}</a>
+        {% endfor %}
+        <div class="dropdown-divider"></div>
+        {% if user.is_authenticated %}
+          <a class="dropdown-item" href="#">Dashboard</a>
+          <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
+        {% else %}
+          <a class="dropdown-item" href="{% url 'login' %}">Login</a>
+          <a class="dropdown-item" href="{% url 'register' %}">Register</a>
+        {% endif %}
+      </div>
+    </div>
+
+    <a href="{% url 'cart' %}" class="cart-icon">
+      <i class="fa fa-shopping-cart fa-lg"></i>
+      <span class="badge badge-danger cart-badge">{{ cart_count }}</span>
+    </a>
+  </div>
+</div>
+
+
+<!-- ============ DESKTOP NAVBAR ============ -->
+<section class="header-main border-bottom mobile-hide">
   <div class="container">
     <div class="row align-items-center">
 
       <!-- LOGO -->
-      <div class="col-12 col-md-3 text-center text-md-left mb-2 mb-md-0">
-        <a href="{% url 'home' %}" class="brand-wrap d-inline-block">
-          <span style="font-weight: bold; font-size: 48px;">
-            <span style="color: #1e4fff;">DEV</span><span style="color: #555;">TÜRKS</span>
+      <div class="col-lg-3">
+        <a href="{% url 'home' %}" class="brand-wrap">
+          <span style="font-weight:bold;font-size:42px;">
+            <span style="color:#1e4fff;">DEV</span><span style="color:#555;">TÜRKS</span>
           </span>
         </a>
       </div>
 
-      <!-- CATEGORY DROPDOWN & STORE BUTTON -->
-      <div class="col-12 col-md-3 d-flex flex-column flex-md-row align-items-center justify-content-md-start mb-2 mb-md-0">
-        <div class="category-wrap dropdown w-100 w-md-auto mb-2 mb-md-0">
-          <button type="button" class="btn btn-primary dropdown-toggle w-100 w-md-auto" data-toggle="dropdown">
-            <i class="fa fa-bars"></i> All category 
+      <!-- CATEGORY -->
+      <div class="col-lg-2">
+        <div class="dropdown">
+          <button class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+            <i class="fa fa-bars"></i> Categories
           </button>
-          <div class="dropdown-menu w-100 w-md-auto">
+          <div class="dropdown-menu">
             <a class="dropdown-item" href="{% url 'store' %}">All Products</a>
             {% for category in links %}
               <a class="dropdown-item" href="{{ category.get_url }}">{{ category.category_name }}</a>
             {% endfor %}
           </div>
         </div>
-        <a href="/store/" class="btn btn-outline-primary w-100 w-md-auto ml-md-2">Store</a>
       </div>
 
       <!-- SEARCH -->
-      <div class="col-12 col-md-4 mb-2 mb-md-0">
-        <form action="{% url 'search' %}" class="search" method="GET">
-          <div class="input-group w-100">
-            <input type="text" class="form-control" placeholder="Search" name="keyword">
+      <div class="col-lg-4">
+        <form action="{% url 'search' %}" method="GET">
+          <div class="input-group">
+            <input type="text" class="form-control" name="keyword" placeholder="Search">
             <div class="input-group-append">
-              <button class="btn btn-primary" type="submit"><i class="fa fa-search"></i></button>
+              <button class="btn btn-primary"><i class="fa fa-search"></i></button>
             </div>
           </div>
         </form>
       </div>
 
       <!-- USER & CART -->
-      <div class="col-12 col-md-2 d-flex flex-column flex-md-row align-items-center justify-content-center justify-content-md-end">
-        {% if user.id is None %}
-          <div class="widget-header text-center text-md-left mb-2 mb-md-0">
-            <small class="title text-muted">Welcome guest!</small>
-            <div> 
-              <a href="{% url 'login' %}">Sign in</a> <span class="dark-transp"> | </span>
-              <a href="{% url 'register' %}"> Register</a>
-            </div>
-          </div>
+      <div class="col-lg-3 text-right">
+        {% if user.is_authenticated %}
+          <span class="mr-2">Welcome {{ user.first_name }}</span>
+          <a href="#" class="mr-2">Dashboard</a>
+          <a href="{% url 'logout' %}">Logout</a>
         {% else %}
-          <div class="widget-header text-center text-md-left mb-2 mb-md-0">
-            <small class="title text-muted">Welcome {{user.first_name}}</small>
-            <div> 
-              <a href="/#">Dashboard</a> <span class="dark-transp"> | </span>
-              <a href="{% url 'logout' %}"> Logout</a>
-            </div>
-          </div>
+          <a href="{% url 'login' %}">Login</a> |
+          <a href="{% url 'register' %}">Register</a>
         {% endif %}
-        <a href="{% url 'cart' %}" class="icon icon-sm rounded-circle border d-inline-block ml-md-2">
-          <i class="fa fa-list-ol"></i>
-          <span class="badge badge-pill badge-danger notify">{{cart_count}}</span>
+
+        <a href="{% url 'cart' %}" class="cart-icon ml-3">
+          <i class="fa fa-shopping-cart fa-lg"></i>
+          <span class="badge badge-danger cart-badge">{{ cart_count }}</span>
         </a>
       </div>
 
@@ -72,34 +99,3 @@
 </section>
 
 </header>
-
-<!-- ================= MOBILE FIX ================= -->
-<style>
-@media (max-width: 768px) {
-  .section-header .row > [class*="col-"] {
-    flex: 0 0 100%;
-    max-width: 100%;
-    margin-bottom: 0.5rem;
-  }
-
-  .category-wrap .btn,
-  .btn-outline-primary {
-    width: 100%;
-    margin-bottom: 8px;
-  }
-
-  .search .input-group {
-    width: 100%;
-  }
-
-  .widget-header {
-    text-align: center;
-    margin-bottom: 8px;
-  }
-
-  .icon.icon-sm {
-    display: block;
-    margin: 0 auto;
-  }
-}
-</style>
